# buildpacks-jvm

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  clippy.toml
.circleci/: config.yml
buildpacks/gradle/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml
buildpacks/gradle/src/: config.rs  detect.rs  errors.rs  framework.rs  main.rs
buildpacks/gradle/src/gradle_command/: daemon.rs  dependency_report.rs  init.rs  mod.rs  tasks.rs
buildpacks/gradle/src/layers/: gradle_home.rs  mod.rs
buildpacks/gradle/test-apps/gradle-env-test/: Procfile  settings.gradle.kts
buildpacks/gradle/test-apps/gradle-env-test/app/: build.gradle.kts
buildpacks/gradle/tests/integration/: environment.rs  init_scripts.rs  main.rs  smoke.rs  ux.rs
buildpacks/jvm/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml  heroku-18.toml  openjdk_inventory.toml
buildpacks/jvm-function-invoker/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.sh  buildpack.toml
buildpacks/jvm-function-invoker/lib/: toolbox.sh
buildpacks/jvm-function-invoker/opt/: jvm-runtime.sh  run.sh
buildpacks/jvm-function-invoker/src/: build.rs  builder.rs  common.rs  data.rs  detect.rs  error.rs  lib.rs  main.rs  util.rs
buildpacks/jvm-function-invoker/src/data/: buildpack_toml.rs  function_bundle.rs  runtime.rs
buildpacks/jvm-function-invoker/src/layers/: bundle.rs  mod.rs  opt.rs  runtime.rs
buildpacks/jvm-function-invoker/src/util/: logger.rs
buildpacks/jvm-function-invoker/tests/: integration_tests.rs
buildpacks/jvm-function-invoker/tests/integration/: main.rs  smoke.rs
buildpacks/jvm/lib/: jvm.sh  openjdk.sh
buildpacks/jvm/lib/v3/: buildpack.sh  common.sh
buildpacks/jvm/opt/: jvmcommon.sh  with_jmap_and_jstack_java  with_jmap_java  with_jstack_java
buildpacks/jvm/src/: constants.rs  errors.rs  main.rs  openjdk_artifact.rs  openjdk_version.rs  salesforce_functions.rs  util.rs  version.rs  version_resolver.rs
buildpacks/jvm/src/layers/: heroku_metrics_agent.rs  metrics_agent.rs  mod.rs  openjdk.rs  runtime.rs
buildpacks/jvm/test-apps/java-22-app/: system.properties
buildpacks/jvm/test-apps/java-23-app/: system.properties
buildpacks/jvm/test-apps/java-24-app/: system.properties
buildpacks/jvm/test-apps/java-26-app/: system.properties
buildpacks/jvm/test-apps/java-default-app/: pom.xml
buildpacks/jvm/tests/: integration_tests.rs
buildpacks/jvm/tests/integration/: main.rs  overlay.rs  versions.rs
buildpacks/leiningen/: Cargo.toml  README.md  buildpack.toml
buildpacks/leiningen/src/: errors.rs  main.rs
buildpacks/leiningen/tests/integration/: main.rs  smoke.rs
buildpacks/maven/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml
buildpacks/maven/lib/: common.sh  dependencies.sh  frameworks.sh  jvm_buildpack_utils.sh  maven.sh
buildpacks/maven/lib/log/: cnb.sh
buildpacks/maven/lib/v3/: buildpack.sh  common.sh
buildpacks/maven/src/: dependencies.rs  error.rs  errors.rs  framework.rs  main.rs  mode.rs  settings.rs  util.rs  warnings.rs
buildpacks/maven/src/layer/: maven.rs  maven_repo.rs  mod.rs
buildpacks/maven/test-apps/simple-http-service/: pom.xml
buildpacks/maven/tests/: customization_tests.rs  misc_tests.rs  polyglot_tests.rs  process_types_tests.rs  settings_xml_tests.rs  version_handling_tests.rs
buildpacks/maven/tests/integration/: automatic_process_type.rs  caching.rs  customization.rs  customization_tests.rs  download_mirror.rs  main.rs  misc.rs  misc_tests.rs  polyglot.rs  polyglot_tests.rs  process_types_tests.rs  sbom.rs  settings_xml.rs  settings_xml_tests.rs  smoke.rs  version_handling_tests.rs  versions.rs
buildpacks/sbt/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml
buildpacks/sbt/assets/: sbt-wrapper.sh
buildpacks/sbt/sbt-plugins/: buildpack-plugin-0.x.scala
buildpacks/sbt/src/: build_configuration.rs  cleanup.rs  configuration.rs  detect.rs  errors.rs  file_tree.rs  main.rs  sbt_version.rs  system_properties.rs
buildpacks/sbt/src/layers/: coursier_cache.rs  dependency_resolver_home.rs  ivy_cache.rs  mod.rs  sbt.rs  sbt_boot.rs  sbt_extras.rs  sbt_global.rs
buildpacks/sbt/src/sbt/: mod.rs  output.rs  tasks.rs  version.rs
buildpacks/sbt/test-apps/play-framework-2.8.19/: Procfile  build.sbt  build.sc
buildpacks/sbt/test-apps/play-framework-2.8.19/conf/: routes
buildpacks/sbt/test-apps/play-framework-3.0.3/: Procfile  build.sbt  build.sc
buildpacks/sbt/test-apps/play-framework-3.0.3/conf/: application.conf
buildpacks/sbt/test-apps/sbt-0.13.16-scala-2.13.10/: build.sbt
buildpacks/sbt/test-apps/sbt-1.8.2-coursier-scala-2.13.10/: build.sbt
buildpacks/sbt/test-apps/sbt-1.8.2-ivy-scala-2.13.10/: Procfile  build.sbt
buildpacks/sbt/test-apps/sbt-1.8.2-scala-2.13.10-no-native-packager/: build.sbt
buildpacks/sbt/test-apps/sbt-1.8.2-scala-2.13.10-no-native-packager/src/main/scala/com/heroku/: Server.scala
buildpacks/sbt/test-apps/sbt-2.0.1-minimal-with-native-packager/: Procfile
buildpacks/sbt/test-apps/scala-app-using-ivy/: build.sbt
buildpacks/sbt/test-apps/scala-play-app-2.7/: Procfile
buildpacks/sbt/test-apps/scala-play-app-2.7/conf/: application.conf
buildpacks/sbt/test-apps/scala-play-app-2.8/: build.sbt
buildpacks/sbt/test-apps/scala-play-app-2.8/app/controllers/: HomeController.scala
buildpacks/sbt/test-apps/scala-play-app-2.8/conf/: routes
buildpacks/sbt/tests/: integration_tests.rs  smoke.rs  ux.rs
buildpacks/sbt/tests/integration/: caching.rs  main.rs  sbt_at_launch.rs  smoke.rs  ux.rs
buildpacks/scala/: Cargo.toml  README.md  build.sh  buildpack.toml
buildpacks/scala/assets/: heroku_buildpack_plugin_sbt_v1.scala
buildpacks/scala/src/: build_configuration.rs  detection.rs  errors.rs  file_tree.rs  main.rs  paths.rs
buildpacks/scala/src/layers/: coursier_cache.rs  ivy_cache.rs  mod.rs  sbt.rs
buildpacks/scala/tests/: integration_tests.rs
shared/: Cargo.toml
shared/src/: app.rs  env.rs  fs.rs  lib.rs  log.rs  output.rs  result.rs  system_properties.rs
shared/src/app/: maven.rs  sbt.rs
(+104 files in other folders)
