[workspace]
resolver = "2"

members = [
    "buildpacks/gradle",
    "buildpacks/jvm",
    "buildpacks/jvm-function-invoker",
    "buildpacks/maven",
    "buildpacks/sbt",
    "shared",
    "shared-test"
]

[workspace.package]
rust-version = "1.80"
edition = "2021"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
panic_in_result_fn = "warn"
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
buildpacks-jvm-shared = { path = "shared" }
buildpacks-jvm-shared-test = { path = "shared-test" }
