[workspace]
resolver = "2"

members = [
    "buildpacks/gradle",
    "buildpacks/jvm",
    "buildpacks/jvm-function-invoker",
    "buildpacks/maven",
    "buildpacks/sbt",
    "shared",
    "shared-test",
]

[workspace.package]
rust-version = "1.96"
edition = "2024"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"
# Allows the usage of cfg(coverage_nightly).
# cargo-llvm-cov enables that config when instrumenting our code, so we can enable
# the experimental coverage_attribute feature.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
panic_in_result_fn = "warn"
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
buildpacks-jvm-shared = { path = "shared" }
buildpacks-jvm-shared-test = { path = "shared-test" }
libcnb = { version = "=0.31.0", features = ["trace"] }
libcnb-test = "=0.31.0"
libherokubuildpack = { version = "=0.31.0", default-features = false }
