[package]
name = "buildpacks-jvm-shared"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2"
java-properties = "2"
libherokubuildpack = { version = "=0.26.0", default-features = false, features = ["log", "command", "write"] }
bullet_stream = "0.4.0"
fun_run = { version = "0.2.0" }
