[package]
name = "gradle"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
buildpacks-jvm-shared.workspace = true
indoc = "2"
libcnb = { version = "=0.29.3", features = ["trace"] }
libherokubuildpack = { version = "=0.30.0", default-features = false, features = [
    "command",
    "error",
    "log",
] }
nom = "7"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
buildpacks-jvm-shared-test.workspace = true
libcnb-test = "=0.29.3"
