[package]
name = "gradle"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
buildpacks-jvm-shared.workspace = true
indoc = "2"
libcnb.workspace = true
libherokubuildpack = { workspace = true, features = [
    "command",
    "error",
    "log",
] }
nom = "7"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
buildpacks-jvm-shared-test.workspace = true
libcnb-test.workspace = true
