[package]
name = "buildpack-heroku-jvm-function-invoker"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2"
libcnb = { version = "=0.27.0", features = ["trace"] }
libherokubuildpack = { version = "=0.28.1", default-features = false, features = ["digest", "download", "error", "log", "toml"] }
serde = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
base64 = "0.22"
buildpacks-jvm-shared-test.workspace = true
libcnb-test = "=0.28.1"
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
