[package]
name = "buildpack-heroku-jvm-function-invoker"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2"
libcnb = { version = "=0.30.0", features = ["trace"] }
libherokubuildpack = { version = "=0.29.3", default-features = false, features = [
    "digest",
    "download",
    "error",
    "log",
    "toml",
] }
serde = "1"
thiserror = "2"
toml = "0.9"

[dev-dependencies]
base64 = "0.22"
buildpacks-jvm-shared-test.workspace = true
libcnb-test = "=0.29.3"
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
