[package]
name = "buildpack-heroku-jvm-function-invoker"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2"
libcnb.workspace = true
libherokubuildpack = { workspace = true, features = [
    "digest",
    "download",
    "error",
    "log",
    "toml",
] }
serde = "1"
thiserror = "2"

[dev-dependencies]
base64 = "0.22"
buildpacks-jvm-shared-test.workspace = true
libcnb-test.workspace = true
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
