[package]
name = "buildpack-heroku-jvm"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
buildpacks-jvm-shared.workspace = true
fs_extra = "1"
indoc = "2"
libcnb = { version = "=0.29.0", features = ["trace"] }
libherokubuildpack = { version = "=0.29.0", default-features = false, features = [
    "digest",
    "download",
    "error",
    "inventory",
    "inventory-sha2",
    "log",
    "tar",
] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
url = "2"
nom = "7"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
toml = "0.9"

[dev-dependencies]
buildpacks-jvm-shared-test.workspace = true
libcnb-test = "=0.29.0"
