[package]
name = "buildpack-heroku-jvm"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
buildpacks-jvm-shared.workspace = true
fs_extra = "1"
indoc = "2"
libcnb.workspace = true
libherokubuildpack = { workspace = true, features = [
    "download",
    "error",
    "inventory",
    "inventory-sha2",
    "log",
    "tar",
] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
url = "2"
nom = "7"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
toml = "1.0"

[dev-dependencies]
buildpacks-jvm-shared-test.workspace = true
libcnb-test.workspace = true
