[package]
name = "buildpack-heroku-maven"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
buildpacks-jvm-shared.workspace = true
flate2 = "1"
indoc = "2"
libcnb = "=0.17.0"
libherokubuildpack = "=0.17.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
shell-words = "1"
tar = "0.4"
tempfile = "3"

[dev-dependencies]
buildpacks-jvm-shared-test.workspace = true
java-properties = "2"
libcnb-test = "=0.17.0"
