[package]
name = "sbt"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
buildpacks-jvm-shared.workspace = true
indoc = "2"
java-properties = "2"
libcnb = "=0.17.0"
libherokubuildpack = { version = "=0.17.0", default-features = false, features = ["command", "error", "log"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
shell-words = "1"

[dev-dependencies]
buildpacks-jvm-shared-test.workspace = true
libcnb-test = "=0.17.0"
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls"] }
